# CorrelationMatrixManager

./: .main.cpp.swp  .syntastic_include_headers  .tags  .tags1  CMakeLists.txt  NOTES.md  README.md  main.cpp
DOCS/: CMakeLists.txt  Doxyfile  Doxyfile.in  Makefile  cmake_install.cmake  conf.py  index.rst
DOCS/API/: manager.rst
DOCS/PHYSICS/: computing_diagrams.rst  correlators.rst  intro.rst  operators.rst  wick_contractions.rst
DOCS/USER_GUIDE/: getting_started.rst  input.rst
EXAMPLES/: a1_input.txt  four_pi_i4_ops.txt  load_diagrams.cpp  pion_input.txt  run.sh  simple_pions.op  two_pi_i2_ops.txt  two_pi_input.txt
EXAMPLES/COMPUTE_DIAGRAMS/: .syntastic_include_headers  Makefile  compile.sh  compute_diagrams.cpp  compute_diagrams_anyql.cpp  compute_diagrams_gpu.cpp  compute_rho.cpp  define_diagrams.h  in-andrei
EXAMPLES/COMPUTE_DIAGRAMS/CFG/: c44_b5.3_k0.158_100  c44_b5.3_k0.158_100.laplacean.eigensystem  c44_b5.3_k0.158_100.smeared.prop  c44_b5.3_k0.158_100.smeared.prop.ckpoint
EXAMPLES/COMPUTE_DIAGRAMS/COMPARE/: Makefile  compare_files.cpp  compare_two_diag_files  compare_values.cpp  convert_diagramnames_toinput.cpp  diagram_names.txt  diagrams.cpp  diagrams.h  file_utilities.cpp  file_utilities.h  in  string_utilities.cpp  string_utilities.h
EXAMPLES/COMPUTE_DIAGRAMS/SRC/: colorvector.cpp  colorvector.h  control_clover_prop_kappa.cu  gamma_mult.cpp  gamma_mult.h  gammas.cpp  gammas.h  gpu_kernel.cpp  gpu_kernel.h  inject.cpp  inject.h  io.cpp  io.h  laplacean_eigensolver.cpp  laplacean_eigensolver.h  lapmult.cpp  lapmult.h  matrix.h  mom_matrix.cpp  mom_matrix.h  smeared_matrix_object.cpp  smeared_matrix_object.h
EXAMPLES/INPUT_FILES/: a1.in  a1_2448.ops  a1_2448_test.ops  d_files.txt  four_pi_i4.in  pion.in  pion.ops  rho.in  rho.ops  simple_pions.ops  three_pi_i3.in  three_pi_i3.ops  two_pi.in
EXAMPLES/SCRIPTS/: check_diagrams.sh  combine_cfgs.sh  combine_diags.sh  mkdirs.sh  run_cse_ql.sh
INCLUDE/: manager.h
INCLUDE/DIAGS/: correlator.h  diagram.h  quark_line.h  trace.h
INCLUDE/OPS/: elemental_op.h  meson.h  operator.h
INCLUDE/UTILS/: file_utilities.h  string_utilities.h  wick.h
SRC/: manager.cpp
SRC/DIAGS/: correlator.cpp  diagram.cpp  quark_line.cpp  trace.cpp
SRC/OPS/: elemental_op.cpp  meson.cpp  operator.cpp
SRC/UTILS/: file_utilities.cpp  string_utilities.cpp  wick.cpp
